<project xmlns="http://maven.apache.org/POM/4.1.0-rc-2" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.1.0-rc-2 https://maven.apache.org/xsd/maven-4.1.0-rc-2.xsd">
  <modelVersion>4.0.0</modelVersion>
  <parent>
    <groupId>com.github.caciocavallosilano</groupId>
    <artifactId>cacio</artifactId>
    <version>1.19.1-SNAPSHOT</version>
  </parent>
  <artifactId>cacio-shared</artifactId>
  <packaging>jar</packaging>

  <name>Cacio Shared Module</name>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.8.1</version>
        <configuration>
          <source>17</source>
          <target>17</target>
          <compilerArgs>
            <arg>-XDignore.symbol.file=true</arg>
            <arg>--add-exports=java.desktop/java.awt.peer=ALL-UNNAMED</arg>
            <arg>--add-exports=java.desktop/sun.awt=ALL-UNNAMED</arg>
            <arg>--add-exports=java.desktop/sun.awt.event=ALL-UNNAMED</arg>
            <arg>--add-exports=java.desktop/sun.font=ALL-UNNAMED</arg>
            <arg>--add-exports=java.desktop/sun.java2d.pipe=ALL-UNNAMED</arg>
            <arg>--add-exports=java.base/java.security=ALL-UNNAMED</arg>
            <arg>--add-exports=java.desktop/sun.awt.image=ALL-UNNAMED</arg>
          </compilerArgs>
        </configuration>
      </plugin>
    </plugins>
  </build>

</project>
